# sailr

./: .gitignore  CHANGELOG.md  Cargo.toml  DX_IMPROVEMENT_REPORT.md  HUMAN_CHANGELOG.md  LICENSE  README.md  README.md_installation_section.md  README_installation_section.md  config.toml  constitution.md  fix_all.py  fix_tests.py  fix_tests2.py  install.sh  sailr.workflow.toml  test_regression  test_regression_get_version  test_regression_get_version2
.github/workflows/: image-push.yml  release.yml  rust.yml  sailr-ci.yml
.roomservice/: test
completion/: _sailr  sailr.bash  sailr.zsh
docs/: PR-17.md  docusaurus.config.js  package-lock.json  sidebars.js
docs/adr/: 0001-sailr-delivery-boundaries.md
docs/blog/: authors.yml
docs/blog/2021-08-26-welcome/: index.md
docs/docs/: cli-usage.md  intro.md
docs/docs/archives/: _category_.json
docs/docs/configuration/: _category_.json  config-toml.md
docs/docs/getting-started/: _category_.json  installation.md  tutorial.md
docs/docs/migration/: roomservice-to-runkernel.md
docs/pilots/: circleci-external-repo.md
docs/src/components/HomepageFeatures/: index.js
docs/src/css/: custom.css
docs/src/pages/: index.js
examples/ci-build/hello/: index.html
k8s/: default.toml
k8s/env-templates/develop/: main.tf  variable.tf
k8s/environments/adriftdev/: config.toml  setup.toml
k8s/environments/dev/: config.toml
k8s/environments/local/: config.toml  main.tf
k8s/environments/staging/: config.toml
k8s/environments/test/: config.toml  main.tf  providers.tf
k8s/templates/core/test2/: service.yaml
k8s/templates/hello-sailr/: configmap.yaml  deployment.yaml  ingress.yaml  service.yaml
k8s/templates/redis/config/: envoy.yaml
k8s/templates/registry/: pvc.yaml
k8s/templates/sample-app/: configmap.yaml
k8s/templates/test-portal2/: configmap.yaml  deployment.yaml  service.yaml
src/: builder.rs  cli.rs  config.rs  default_config.toml  deploy.rs  environment.rs  errors.rs  filesystem.rs  generate.rs  interactive.rs  kube.rs  lib.rs  main.rs  oci.rs  plan.rs  provider.rs  ui.rs  utils.rs
src/deployment/: kube_api.rs  mod.rs
src/deployment/k8sm8/: configmaps.rs  cronjobs.rs  daemonsets.rs  deployments.rs  events.rs  jobs.rs  logs.rs  mod.rs  namespaces.rs  nodes.rs  pods.rs  processing.rs  secrets.rs  services.rs  statefulsets.rs
src/executor/: mod.rs
src/infra/: mod.rs
src/infra/aws_eks/: main.tf  mod.rs  outputs.tf
src/infra/local_k8s/: main.tf  mod.rs  providers.tf  variables.tf
src/k8s/templates/registry/: pv.yaml  service.yaml
src/orchestrator/: mod.rs
src/roomservice/: config.rs  mod.rs  room.rs  util.rs
src/templates/: mod.rs  scaffolding.rs
src/templates/k8s/postgres/: deployment.yaml  pv.yaml  service.yaml
src/templates/k8s/redis/: service.yaml
src/templates/k8s/redis-stack/: deployment.yaml  service.yaml
src/tui/: app.rs  mod.rs  ui.rs
src/workflow/: builder_context.rs  ci.rs  config.rs  error.rs  image.rs  mod.rs  plan.rs  planner.rs  profile.rs  render.rs  runner.rs  task_id.rs
test/service/test-service/: Cargo.toml  Dockerfile
test_workspace/: config.toml
tests/: cli_integration_tests.rs  test_roomservice_hashing.rs
tests/fixtures/report-service/: .gitkeep
tests/fixtures/reports/: image-publication-failure.json  image-publication-success.json  image-push-plan.json  push_report.json
(+17 files in other folders)
