[package]
name = "sailr"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "~4", features = ["derive"] }
futures = "~0.3"
inquire = "~0.6"
tokio = { version = "~1", features = ["full"] }
dotenvy = "~0.15"
serde = { version = "~1", features = ["derive"] }
serde_yaml = "~0.9"
toml = "~0.7"
flate2 = "~1.0"
tar = "~0.4"
chrono = "~0.4"
scribe-rust = "~0.2"
k8s-openapi = { version = "~0.18", features = ["v1_26"] }
kube = { version = "~0.83", features = ["runtime", "derive", "client", "rustls-tls", "jsonpatch"] }
tower = { version = "0.4.13", features = ["buffer", "filter", "util"] }
tower-http = { version = "0.4.0", features = ["auth", "map-response-body", "trace"] }
hyper = { version = "0.14.13", features = ["client", "http1", "stream", "tcp"] }
hyper-rustls = { version = "0.24.0" }
async-recursion = "1.0.4"
thiserror = "1.0.43"
anyhow = "1.0.72"
serde_json = "1.0.103"
