[package]
name = "sailr"
version = "1.15.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "~4", features = ["derive"] }
futures = "~0.3"
tokio = { version = "~1", features = ["full"] }
dotenvy = "~0.15"
serde = { version = "~1", features = ["derive"] }
serde_yaml = "~0.9"
toml = "~0.7"
chrono = "~0.4"
scribe-rust = "~0.2"
k8s-openapi = { version = "~0.25", features = ["v1_33"] }
kube = { version = "~1.1.0", features = [
    "runtime",
    "derive",
    "client",
    "openssl-tls",
    "jsonpatch",
] }
async-recursion = "1.1.1"
thiserror = "1.0.69"
anyhow = "1.0.95"
serde_json = "1.0.138"
clap_complete = "4.5.44"
checksums = "0.9"
rayon = "1.10.0"
serde_derive = "1.0.217"
subprocess = "0.1.20"
ignore = "0.4.23"
libc = "0.2.169"
once_cell = "1.20.3"
diffy = "0.4.2"
walkdir = "2.5.0"
inquire = "0.7.5"
tokio-stream = "0.1.17"
term = "1.0.2"
base64 = "0.22.1"

[profile.release]
opt-level = 3
